noinst_PROGRAMS = ctkey_gen ctkey_pub ctkey_der ctkey_skinfo ctkey_pkinfo ctmsg_enc ctmsg_dec ctmsg_info ctmsg_rehash

ctkey_gen_SOURCES = ctkey_gen.c b64file.c
ctkey_gen_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctkey_gen_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctkey_pub_SOURCES = ctkey_pub.c b64file.c
ctkey_pub_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctkey_pub_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctkey_der_SOURCES = ctkey_der.c b64file.c
ctkey_der_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctkey_der_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctkey_skinfo_SOURCES = ctkey_skinfo.c b64file.c
ctkey_skinfo_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctkey_skinfo_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctkey_pkinfo_SOURCES = ctkey_pkinfo.c b64file.c
ctkey_pkinfo_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctkey_pkinfo_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctmsg_enc_SOURCES = ctmsg_enc.c b64file.c
ctmsg_enc_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctmsg_enc_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctmsg_dec_SOURCES = ctmsg_dec.c b64file.c
ctmsg_dec_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctmsg_dec_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctmsg_info_SOURCES = ctmsg_info.c b64file.c
ctmsg_info_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctmsg_info_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)

ctmsg_rehash_SOURCES = ctmsg_rehash.c b64file.c
ctmsg_rehash_CFLAGS = -Wall -I ../include -I $(prefix)/include/pbc $(CFLAGS)
ctmsg_rehash_LDADD = -L../src/.libs/ -lciphrtxt $(LDFLAGS)
